--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rhai-loco"
-version = "0.2.2"
+version = "0.3.0"
 rust-version = "1.66.0"
 edition = "2021"
 authors = ["Stephen Chung"]
@@ -11,8 +11,8 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-rhai = { version = "1.17", features = ["only_i64", "decimal", "sync", "serde"] }
-loco-rs = { version = "0.3.1" }
+rhai = { path = "../rhai", version = "1.19", features = ["only_i64", "decimal", "sync", "serde"] }
+loco-rs = { version = "0.6.0" }
 axum = { version = "0.7.1" }
 tera = { version = "1" }
 tracing = { version = "0.1.40" }
